# addi-mlops-challenge

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
deliverables/: part3_release_strategy.md  part4_observability.md  part5_production_readiness.md  part6_architecture_reasoning.md  part7_clarification.md
deliverables/part1_api_and_containerization/: Dockerfile  README.md  docker-compose.yml
deliverables/part1_api_and_containerization/app/: config.py  context.py  exception_handlers.py  logging_config.py  main.py  schemas.py
deliverables/part1_api_and_containerization/app/middleware/: correlation.py  logging.py
deliverables/part1_api_and_containerization/app/routers/: ab_config.py  chat.py  feedback.py  health.py
deliverables/part1_api_and_containerization/app/store/: ab_config_store.py  conversation_history.py  feedback_store.py
deliverables/part1_api_and_containerization/tests/: conftest.py  test_ab_config.py  test_chat.py  test_concurrent.py  test_domain.py  test_feedback.py  test_health.py  test_integration.py  test_schemas.py
deliverables/part2_ab_testing/: README.md  ab_config.py  ab_router.py  measurement_plan.md
deliverables/part2_ab_testing/agent_versions/: version_a.py  version_b.py
deliverables/part2_ab_testing/tests/: conftest.py  test_ab_router.py  test_version_b.py
docs/stakeholder_interviews/: team_operations.md  team_payments.md  team_platform.md  team_product.md
scripts/: lint.sh
source/adapters/chains/: callbacks.py  general_chain.py  llm_factory.py
source/adapters/utils/: data_filter.py  knowledge_base.py  mock_data.py
source/application/: graph.py  state.py
source/domain/: fetch_user_data.py  handle_general.py
source/examples/: README.md  example_chain.py  example_domain_function.py  example_graph.py  example_kb_entry.py
tests/: inline.py
